  - Scale modes control how bitmaps are displayed within the control boundaries:
    - `None`: Display bitmap at original size (no scaling)
    - `Fill`: Scale to fill entire control (may change aspect ratio)
    - `AspectFit`: Scale to fit within control while maintaining aspect ratio
    - `AspectFill`: Scale to fill control while maintaining aspect ratio (may crop)

### Enhancements
- **API Exports**: Added `ScaleMode` enum to public API exports in prelude and widgets module
- **FFI Layer**: Extended C++ bindings with `wxd_StaticBitmap_SetScaleMode` and `wxd_StaticBitmap_GetScaleMode` functions
- **Type Safety**: Implemented safe conversion between Rust enum and C++ scale mode constants

## 0.6.5

### Bug Fixes
- **XRC Loading from String**: Fixed critical UTF-8 encoding bug in `wxd_XmlResource_LoadFromString` function
  - Corrected memory stream size calculation to use actual UTF-8 byte length instead of Unicode character count
  - Fixed truncated XRC data when loading XML with non-ASCII characters (e.g., Chinese characters)
  - Resolved "Failed to parse XML document" errors when using wxFormBuilder-generated XRC files
  - **wxDragon is now fully compatible with wxFormBuilder-generated XRC files without requiring manual cleanup**

### Enhancements
- **DataViewCustomRenderer GetSizeCallback**: Enhanced the `GetSizeCallback` signature to receive both the variant value and default cell size as parameters, making it more practical for content-aware sizing
  - The callback now has the signature `Fn(&Variant, Size) -> Size` instead of `Fn() -> Size`
  - Allows renderers to adjust their size based on the actual data content

## 0.6.4

### New Features
- **DataView Custom Renderers**: Added comprehensive custom renderer support for DataView controls
  - Implemented `DataViewCustomRenderer` with full editor functionality
  - Added editor-related APIs for custom DataView rendering with edit capabilities
  - Enhanced DataView widget with custom renderer integration