@@ -14,7 +14,17 @@
     - `AspectFit`: Scale to fit within control while maintaining aspect ratio
     - `AspectFill`: Scale to fill control while maintaining aspect ratio (may crop)
 
+### Bug Fixes
+- **StaticBitmap Display Refresh**: Fixed issue where setting scale mode or bitmap didn't immediately update the display
+  - Added automatic parent refresh and layout calls to `set_scale_mode()`, `set_bitmap()`, and `set_bitmap_bundle()` methods
+  - Eliminates the need to manually resize the window to see scale mode changes applied
+  - Ensures bitmap scaling is immediately visible when scale mode or bitmap content changes
+
 ### Enhancements
+- **WxWidget Trait**: Added `get_parent()` method to `WxWidget` trait for accessing parent windows
+  - Returns `Option<Window>` - `Some(Window)` if widget has a parent, `None` for top-level windows
+  - Enables child widgets to trigger refresh and layout updates on their parent containers
+  - Improves widget update behavior by allowing proper parent notification
 - **API Exports**: Added `ScaleMode` enum to public API exports in prelude and widgets module
 - **FFI Layer**: Extended C++ bindings with `wxd_StaticBitmap_SetScaleMode` and `wxd_StaticBitmap_GetScaleMode` functions
 - **Type Safety**: Implemented safe conversion between Rust enum and C++ scale mode constants
